--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 jobs:
-  # Build for ARM
+  # Build for ARM (on QEMU ARM)
   build-arm:
     runs-on: ubuntu-latest
     permissions:
@@ -14,8 +14,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set up QEMU
+      - name: Set up QEMU for ARM
         uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/arm64
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Log in to GitHub Container Registry
@@ -41,7 +43,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  # Build for AMD
+  # Build for AMD (on QEMU AMD)
   build-amd:
     runs-on: ubuntu-latest
     permissions:
@@ -50,8 +52,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set up QEMU
+      - name: Set up QEMU for AMD
         uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/amd64
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Log in to GitHub Container Registry
