--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -1,9 +1,13 @@
 name: Build and Push Multi-Arch Docker Image
 
 on:
-  push:
-    branches: [main]
+  release:
+    types: [published]
 
+env:
+  IMAGE_NAME: ghcr.io/${{ github.repository }}
+  VERSION: ${{ github.event.release.tag_name }}
+  
 jobs:
   # Build for ARM (on QEMU ARM)
   build-arm-linux:
@@ -39,11 +43,11 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:$(date +'%Y-%m-%d')
-          platforms: linux/arm64
+            ${{ env.IMAGE_NAME }}:latest
+            ${{ env.IMAGE_NAME }}:${{ env.VERSION }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          platforms: linux/arm64
 
   # Build for AMD (on QEMU AMD)
   build-amd-linux:
@@ -79,88 +83,16 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:$(date +'%Y-%m-%d')
+            ${{ env.IMAGE_NAME }}:latest
+            ${{ env.IMAGE_NAME }}:${{ env.VERSION }}
           platforms: linux/amd64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  # Build for Windows ARM64
-  build-arm-windows:
-    runs-on: windows-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-      - name: Build and push ARM Windows image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:$(date +'%Y-%m-%d')
-          platforms: windows/arm64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  # Build for Windows AMD64
-  build-amd-windows:
-    runs-on: windows-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-      - name: Build and push AMD Windows image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:$(date +'%Y-%m-%d')
-          platforms: windows/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
   # Create the Multi-Arch Manifest
   create-manifest:
     runs-on: ubuntu-latest
-    needs: [build-arm-linux, build-amd-linux, build-arm-windows, build-amd-windows]
+    needs: [build-arm-linux, build-amd-linux]
     permissions:
       contents: read
       packages: write
@@ -180,12 +112,6 @@ jobs:
           docker manifest create ghcr.io/${{ github.repository }}:latest \
             --amend ghcr.io/${{ github.repository }}:latest-linux/amd64 \
             --amend ghcr.io/${{ github.repository }}:latest-linux/arm64 \
-            --amend ghcr.io/${{ github.repository }}:latest-windows/amd64 \
-            --amend ghcr.io/${{ github.repository }}:latest-windows/arm64
-          docker manifest create ghcr.io/${{ github.repository }}:$(date +'%Y-%m-%d') \
-            --amend ghcr.io/${{ github.repository }}:$(date +'%Y-%m-%d')-linux/amd64 \
-            --amend ghcr.io/${{ github.repository }}:$(date +'%Y-%m-%d')-linux/arm64 \
-            --amend ghcr.io/${{ github.repository }}:$(date +'%Y-%m-%d')-windows/amd64 \
-            --amend ghcr.io/${{ github.repository }}:$(date +'%Y-%m-%d')-windows/arm64
+            --amend ${{ env.IMAGE_NAME }}:${{ env.VERSION }}:latest-linux/amd64 \
+            --amend ${{ env.IMAGE_NAME }}:${{ env.VERSION }}:latest-linux/arm64
           docker manifest push ghcr.io/${{ github.repository }}:latest
-          docker manifest push ghcr.io/${{ github.repository }}:$(date +'%Y-%m-%d')
