--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -1,16 +1,12 @@
 name: Build and Push Multi-Arch Docker Image
 
 on:
-  release:
-    types: [published]
+  push:
+    branches: [main]
 
-env:
-  IMAGE_NAME: ghcr.io/${{ github.repository }}
-  VERSION: ${{ github.event.release.tag_name }}
-  
 jobs:
   # Build for ARM (on QEMU ARM)
-  build-arm-linux:
+  build-arm:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -42,15 +38,13 @@ jobs:
         with:
           context: .
           push: true
-          tags: |
-            ${{ env.IMAGE_NAME }}:latest
-            ${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+          tags: ghcr.io/${{ github.repository }}:latest
+          platforms: linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/arm64
 
   # Build for AMD (on QEMU AMD)
-  build-amd-linux:
+  build-amd:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -82,9 +76,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: |
-            ${{ env.IMAGE_NAME }}:latest
-            ${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+          tags: ghcr.io/${{ github.repository }}:latest
           platforms: linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -92,7 +84,7 @@ jobs:
   # Create the Multi-Arch Manifest
   create-manifest:
     runs-on: ubuntu-latest
-    needs: [build-arm-linux, build-amd-linux]
+    needs: [build-arm, build-amd]  # Only run after ARM and AMD builds finish
     permissions:
       contents: read
       packages: write
@@ -111,7 +103,5 @@ jobs:
         run: |
           docker manifest create ghcr.io/${{ github.repository }}:latest \
             --amend ghcr.io/${{ github.repository }}:latest-linux/amd64 \
-            --amend ghcr.io/${{ github.repository }}:latest-linux/arm64 \
-            --amend ${{ env.IMAGE_NAME }}:${{ env.VERSION }}:latest-linux/amd64 \
-            --amend ${{ env.IMAGE_NAME }}:${{ env.VERSION }}:latest-linux/arm64
+            --amend ghcr.io/${{ github.repository }}:latest-linux/arm64
           docker manifest push ghcr.io/${{ github.repository }}:latest
