--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -1,12 +1,16 @@
 name: Build and Push Multi-Arch Docker Image
 
 on:
-  push:
-    branches: [main]
+  release:
+    types: [published]
 
+env:
+  IMAGE_NAME: ghcr.io/${{ github.repository }}
+  VERSION: ${{ github.event.release.tag_name }}
+  
 jobs:
   # Build for ARM (on QEMU ARM)
-  build-arm:
+  build-arm-linux:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -38,13 +42,13 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest
-          platforms: linux/arm64
+          tags: ${{ env.IMAGE_NAME }}:arm64-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          platforms: linux/arm64
 
   # Build for AMD (on QEMU AMD)
-  build-amd:
+  build-amd-linux:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -76,7 +80,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest
+          tags: ${{ env.IMAGE_NAME }}:amd64-latest
           platforms: linux/amd64
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -84,7 +88,7 @@ jobs:
   # Create the Multi-Arch Manifest
   create-manifest:
     runs-on: ubuntu-latest
-    needs: [build-arm, build-amd]  # Only run after ARM and AMD builds finish
+    needs: [build-arm-linux, build-amd-linux]
     permissions:
       contents: read
       packages: write
@@ -102,6 +106,12 @@ jobs:
       - name: Create and push multi-arch manifest
         run: |
           docker manifest create ghcr.io/${{ github.repository }}:latest \
-            --amend ghcr.io/${{ github.repository }}:latest-linux/amd64 \
-            --amend ghcr.io/${{ github.repository }}:latest-linux/arm64
+            --amend ghcr.io/${{ github.repository }}:amd64-latest \
+            --amend ghcr.io/${{ github.repository }}:arm64-latest
           docker manifest push ghcr.io/${{ github.repository }}:latest
+
+          docker manifest create ghcr.io/${{ github.repository }}:${{ github.ref_name }} \
+            --amend ghcr.io/${{ github.repository }}:amd64-latest \
+            --amend ghcr.io/${{ github.repository }}:arm64-latest
+          docker manifest push ghcr.io/${{ github.repository }}:${{ github.ref_name }}
+
