--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -18,38 +18,47 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        
       - name: Set up QEMU for ARM
         uses: docker/setup-qemu-action@v3
         with:
           platforms: linux/arm64
+          
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Cache Docker layers
-        uses: actions/cache@v3
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v3
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-      - name: Build and push ARM64 image
+          images: ${{ env.IMAGE_NAME }}
+
+      - name: Build and push Docker image
+        id: push
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ${{ env.IMAGE_NAME }}:arm64-latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: ${{ steps.meta.outputs.tags }}-arm64
+          labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/arm64
-          outputs: type=image  # <--- important
+          
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-name: ${{ env.IMAGE_NAME }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
 
   # Build for AMD (on QEMU AMD)
-  build-amd-linux:
+  build-amd64-linux:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -57,40 +66,49 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set up QEMU for AMD
+        
+      - name: Set up QEMU for AMD64
         uses: docker/setup-qemu-action@v3
         with:
           platforms: linux/amd64
+          
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Cache Docker layers
-        uses: actions/cache@v3
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v3
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-      - name: Build and push AMD image
+          images: ${{ env.IMAGE_NAME }}
+
+      - name: Build and push Docker image
+        id: push
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ${{ env.IMAGE_NAME }}:amd64-latest
+          tags: ${{ steps.meta.outputs.tags }}-amd64
+          labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          outputs: type=image  # <--- important
+            
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-name: ${{ env.IMAGE_NAME }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
 
   # Create the Multi-Arch Manifest
   create-manifest:
     runs-on: ubuntu-latest
-    needs: [build-arm-linux, build-amd-linux]
+    needs: [build-arm-linux, build-amd64-linux]
     permissions:
       contents: read
       packages: write
@@ -109,8 +127,8 @@ jobs:
         run: |
           # Create manifest for latest
           docker manifest create ${{ env.IMAGE_NAME }}:latest \
-            --amend ${{ env.IMAGE_NAME }}:amd64-latest \
-            --amend ${{ env.IMAGE_NAME }}:arm64-latest
+            --amend ${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.tags }}-amd64 \
+            --amend ${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.tags }}-arm64
           docker manifest push ${{ env.IMAGE_NAME }}:latest
 
 
