--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -1,5 +1,8 @@
 name: Build and Push Multi-Arch Docker Image
-
+permissions:
+  contents: read
+  pull-requests: read
+  
 on:
   push:
     branches:
