--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -1,8 +1,7 @@
-name: Build and Push Multi-Arch Docker Image
+name: Build and Publish Docker Image
 permissions:
   contents: read
   pull-requests: read
-  
 on:
   push:
     branches:
@@ -17,7 +16,7 @@ jobs:
 
     env:
       GIT_USER: ${{ secrets.GIT_USER }}
-      IMAGE_NAME: my-image        # change to your image name
+      IMAGE_NAME: my-image        # replace with your image name
       GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
 
     steps:
@@ -25,10 +24,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set tags
-        id: tag
         run: |
           DATE_TAG=$(date +'%Y-%m-%d')
-          SHORT_SHA=$(git rev-parse --short HEAD)
+          SHORT_SHA=${GITHUB_SHA:0:7}
           echo "DATE_TAG=$DATE_TAG" >> $GITHUB_ENV
           echo "COMMIT_TAG=$SHORT_SHA" >> $GITHUB_ENV
 
@@ -43,7 +41,7 @@ jobs:
           docker buildx inspect build_$IMAGE_NAME >/dev/null 2>&1 || \
           docker buildx create --name build_$IMAGE_NAME --use --bootstrap
 
-      - name: Build and push architecture-specific image
+      - name: Build and push Docker image
         run: |
           docker buildx build \
             --builder build_$IMAGE_NAME \
@@ -65,6 +63,8 @@ jobs:
       GIT_USER: ${{ secrets.GIT_USER }}
       IMAGE_NAME: my-image
       GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
+      DATE_TAG: ${{ env.DATE_TAG }}
+      COMMIT_TAG: ${{ env.COMMIT_TAG }}
 
     steps:
       - name: Login to GHCR
@@ -72,7 +72,7 @@ jobs:
 
       - name: Create multi-arch manifest
         run: |
-          SHORT_SHA=${GITHUB_SHA:0:7}
+          SHORT_SHA=${COMMIT_TAG}
           docker manifest create ghcr.io/$GIT_USER/$IMAGE_NAME:latest \
             --amend ghcr.io/$GIT_USER/$IMAGE_NAME:${SHORT_SHA}-amd64 \
             --amend ghcr.io/$GIT_USER/$IMAGE_NAME:${SHORT_SHA}-arm64
