--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -7,6 +7,7 @@ on:
     branches:
       - master
 
+
 jobs:
   docker-build:
     runs-on: ["self-hosted", "${{ matrix.arch }}"]
@@ -16,7 +17,7 @@ jobs:
 
     env:
       GIT_USER: ${{ secrets.GIT_USER }}
-      IMAGE_NAME: my-image        # replace with your image name
+      IMAGE_NAME: my-image        # change to your image name
       GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
 
     steps:
@@ -24,11 +25,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set tags
+        id: tags
         run: |
           DATE_TAG=$(date +'%Y-%m-%d')
           SHORT_SHA=${GITHUB_SHA:0:7}
-          echo "DATE_TAG=$DATE_TAG" >> $GITHUB_ENV
-          echo "COMMIT_TAG=$SHORT_SHA" >> $GITHUB_ENV
+          echo "::set-output name=date::$DATE_TAG"
+          echo "::set-output name=sha::$SHORT_SHA"
+        shell: bash
 
       - name: Login to GHCR
         run: echo $GHCR_TOKEN | docker login ghcr.io -u $GIT_USER --password-stdin
@@ -41,20 +44,24 @@ jobs:
           docker buildx inspect build_$IMAGE_NAME >/dev/null 2>&1 || \
           docker buildx create --name build_$IMAGE_NAME --use --bootstrap
 
-      - name: Build and push Docker image
+      - name: Build and push architecture-specific image
         run: |
           docker buildx build \
             --builder build_$IMAGE_NAME \
             --platform linux/${{ matrix.arch }} \
             --cache-from=type=registry,ref=ghcr.io/$GIT_USER/$IMAGE_NAME:cache \
             --cache-to=type=registry,ref=ghcr.io/$GIT_USER/$IMAGE_NAME:cache,mode=max \
-            -t ghcr.io/$GIT_USER/$IMAGE_NAME:${{ env.COMMIT_TAG }}-${{ matrix.arch }} \
-            -t ghcr.io/$GIT_USER/$IMAGE_NAME:${{ env.DATE_TAG }}-${{ matrix.arch }} \
+            -t ghcr.io/$GIT_USER/$IMAGE_NAME:${{ steps.tags.outputs.sha }}-${{ matrix.arch }} \
+            -t ghcr.io/$GIT_USER/$IMAGE_NAME:${{ steps.tags.outputs.date }}-${{ matrix.arch }} \
             --push \
             docker-$IMAGE_NAME
 
       - name: Cleanup builder
         run: docker buildx rm build_$IMAGE_NAME || true
+
+    outputs:
+      date: ${{ steps.tags.outputs.date }}
+      sha: ${{ steps.tags.outputs.sha }}
 
   docker-manifest:
     needs: docker-build
@@ -63,8 +70,8 @@ jobs:
       GIT_USER: ${{ secrets.GIT_USER }}
       IMAGE_NAME: my-image
       GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
-      DATE_TAG: ${{ env.DATE_TAG }}
-      COMMIT_TAG: ${{ env.COMMIT_TAG }}
+      DATE_TAG: ${{ needs.docker-build.outputs.date }}
+      COMMIT_TAG: ${{ needs.docker-build.outputs.sha }}
 
     steps:
       - name: Login to GHCR
