--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -17,7 +17,7 @@ jobs:
 
     env:
       GIT_USER: ${{ secrets.GIT_USER }}
-      IMAGE_NAME: ${{ github.repository_name }}
+      IMAGE_NAME: ${{ github.repository.split('/')[1] }}
       GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
 
     steps:
@@ -48,6 +48,8 @@ jobs:
         run: |
           docker buildx inspect build_$IMAGE_NAME >/dev/null 2>&1 || \
           docker buildx create --name build_$IMAGE_NAME --use --bootstrap
+        env:
+          IMAGE_NAME: ${{ github.repository.split('/')[1] }}
 
       - name: Build and push architecture-specific image
         run: |
@@ -60,9 +62,14 @@ jobs:
             -t ghcr.io/$GIT_USER/$IMAGE_NAME:${{ steps.tags.outputs.date }}-${{ matrix.arch }} \
             --push \
             docker-$IMAGE_NAME
+        env:
+          IMAGE_NAME: ${{ github.repository.split('/')[1] }}
+          GIT_USER: ${{ secrets.GIT_USER }}
 
       - name: Cleanup builder
         run: docker buildx rm build_$IMAGE_NAME || true
+        env:
+          IMAGE_NAME: ${{ github.repository.split('/')[1] }}
 
     outputs:
       date: ${{ steps.tags.outputs.date }}
