--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -27,6 +27,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+          SHORT_SHA: ${{ env.SHORT_SHA }}
       - name: Build and push ${{ matrix.arch }} image
         id: build
         uses: docker/build-push-action@v6
@@ -38,7 +39,7 @@ jobs:
           #tags: ${{ env.GHCR_IMAGE }}-${{ matrix.arch }}
           #tags: ghcr.io/${{ github.repository }}:${{ matrix.arch }}
           tags: |
-            ghcr.io/${{ github.repository }}:${{ steps.tags.outputs.sha }}-${{ matrix.arch }}
+            ghcr.io/${{ github.repository }}:${SHORT_SHA}-${{ matrix.arch }}
           #outputs: type=image,push-by-digest=true,name-canonical=true
     
   manifest:
