--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -28,7 +28,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          SHORT_SHA: ${{ env.SHORT_SHA }}
       - name: Build and push ${{ matrix.arch }} image
         id: build
         uses: docker/build-push-action@v6
@@ -37,11 +36,8 @@ jobs:
           file: Dockerfile
           platforms: linux/${{ matrix.arch }}
           push: true
-          #tags: ${{ env.GHCR_IMAGE }}-${{ matrix.arch }}
-          #tags: ghcr.io/${{ github.repository }}:${{ matrix.arch }}
           tags: |
             ghcr.io/${{ github.repository }}:${{ github.sha }}-${{ matrix.arch }}
-          #outputs: type=image,push-by-digest=true,name-canonical=true
     
   manifest:
     runs-on: self-hosted
@@ -54,20 +50,18 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Create and push manifest
+      - name: Create and push multi-arch manifests
         env:
-          IMAGE_NAME: ${{ github.repository }}
-          #SHORT_SHA: ${{ SHORT_SHA }}
-          SHORT_SHA: ${{ steps.tags.outputs.sha }}
-          DATE_TAG: ${{ steps.tags.outputs.date }}
+          GHCR_IMAGE: ${{ github.repository }}
+          SHORT_SHA: ${{ needs.build-multiarch.outputs.sha }}
+          DATE_TAG: ${{ needs.build-multiarch.outputs.date }}
         run: |
-          DATE_TAG=$(date +'%Y-%m-%d')
           # latest tag manifest
           docker manifest create ghcr.io/$GHCR_IMAGE:latest \
             --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64 \
             --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-arm64
           docker manifest push ghcr.io/$GHCR_IMAGE:latest
-      
+  
           # date tag manifest
           docker manifest create ghcr.io/$GHCR_IMAGE:$DATE_TAG \
             --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64 \
