--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -19,6 +19,8 @@ jobs:
         arch: [amd64, arm64]
     outputs:
       digest: ${{ steps.build.outputs.digest }}
+      sha: ${{ steps.tags.outputs.sha }}
+      date: ${{ steps.tags.outputs.date }}
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
@@ -38,7 +40,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository }}:${{ github.sha }}-${{ matrix.arch }}
-    
+
   manifest:
     runs-on: self-hosted
     needs: [build-multiarch]
@@ -56,6 +58,11 @@ jobs:
           SHORT_SHA: ${{ needs.build-multiarch.outputs.sha }}
           DATE_TAG: ${{ needs.build-multiarch.outputs.date }}
         run: |
+          echo "DATE_TAG=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+          echo "SHORT_SHA=${GITHUB_SHA:0:7}" >> $GITHUB_ENV
+          echo "::set-output name=sha::${GITHUB_SHA:0:7}"
+          echo "::set-output name=date::$(date +'%Y-%m-%d')"
+          
           # latest tag manifest
           docker manifest create ghcr.io/$GHCR_IMAGE:latest \
             --amend ghcr.io/$GHCR_IMAGE:${SHORT_SHA}-amd64 \
