--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -64,10 +64,9 @@ jobs:
         env:
           GHCR_IMAGE: ${{ github.repository }}
           SHORT_SHA: ${{ github.sha }}
-          DATE_TAG: ${{date +'%Y.%m.%d_%H%M'}}
         run: |
           SHORT_SHA=${SHORT_SHA::7}
-          #DATE_TAG=${date +'%Y.%m.%d_%H%M'}
+          DATE_TAG=${date +'%Y.%m.%d_%H%M'}
 
           echo "Using SHORT_SHA: $SHORT_SHA"
           echo "Using DATE_TAG: $DATE_TAG"
